[package]
name = "anreg"
version = "1.1.0"
edition = "2021"

license = "MPL-2.0"
description = "Anreg is a lightweight regular expression engine (interpreter) for XiaoXuan Regular Expression."
homepage = "https://hemashushu.github.io/works/anreg"
documentation = "https://hemashushu.github.io/works/anreg"
repository = "https://github.com/hemashushu/anreg-rs"
readme = "README.md"
keywords = ["regex", "xiaoxuan", "anreg"]
categories = []

[dependencies]
# argh = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
